; ModuleID = '/home/carl/AnghaBench/git/negotiator/extr_skipping.c_add_tip.c'
source_filename = "/home/carl/AnghaBench/git/negotiator/extr_skipping.c_add_tip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fetch_negotiator = type { i32, i32* }
%struct.commit = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@SEEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fetch_negotiator*, %struct.commit*)* @add_tip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_tip(%struct.fetch_negotiator* %0, %struct.commit* %1) #0 {
  %3 = alloca %struct.fetch_negotiator*, align 8
  %4 = alloca %struct.commit*, align 8
  store %struct.fetch_negotiator* %0, %struct.fetch_negotiator** %3, align 8
  store %struct.commit* %1, %struct.commit** %4, align 8
  %5 = load %struct.fetch_negotiator*, %struct.fetch_negotiator** %3, align 8
  %6 = getelementptr inbounds %struct.fetch_negotiator, %struct.fetch_negotiator* %5, i32 0, i32 1
  store i32* null, i32** %6, align 8
  %7 = load %struct.commit*, %struct.commit** %4, align 8
  %8 = getelementptr inbounds %struct.commit, %struct.commit* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @SEEN, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  br label %21

15:                                               ; preds = %2
  %16 = load %struct.fetch_negotiator*, %struct.fetch_negotiator** %3, align 8
  %17 = getelementptr inbounds %struct.fetch_negotiator, %struct.fetch_negotiator* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = load %struct.commit*, %struct.commit** %4, align 8
  %20 = call i32 @rev_list_push(i32 %18, %struct.commit* %19, i32 0)
  br label %21

21:                                               ; preds = %15, %14
  ret void
}

declare dso_local i32 @rev_list_push(i32, %struct.commit*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
